--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.cdnfonts.com/css/helvetica-neue-55");
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
 @import "./variables.scss";
+@import "./mixins.scss";
 
 *,
 *::before,
@@ -14,6 +15,14 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; //1rem = 10px;
+
+  @include responsive("tab-land") {
+    font-size: 56.25%; //1rem = 9px;
+  }
+
+  @include responsive("mobile") {
+    font-size: 50%; // 1rem = 8pxx
+  }
 }
 
 body {
@@ -28,4 +37,6 @@ body {
   max-width: 120rem;
   margin-right: auto;
   margin-left: auto;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
