--- a/src/ui/ShowDetails/ShowDetails.module.scss
+++ b/src/ui/ShowDetails/ShowDetails.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/variables.scss";
+@import "../../styles/mixins.scss";
 
 .sectionBody {
   padding: 10rem 0 10rem 0;
@@ -21,6 +22,8 @@
   position: relative;
   z-index: 99;
   max-width: 120rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   margin: 0 auto;
 }
 
@@ -46,4 +49,13 @@
 .movieDetails {
   display: flex;
   gap: 2rem;
+
+  @include responsive-custom(25em) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    & > :nth-child(even) {
+      text-align: right;
+    }
+  }
 }
